--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "grunt-contrib-copy": "~0.5.0",
     "load-grunt-tasks": "~0.6.0",
     "grunt-contrib-connect": "latest",
-    "grunt-contrib-sass": "latest"
+    "grunt-contrib-sass": "latest",
+    "grunt-contrib-clean": "0.6.0"
   }
 }
