--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
   "homepage": "http://sudharti.github.io",
   "dependencies": {
     "bootstrap-sass-official": "3.2.0",
-    "html5shiv": "~3.7.2"
+    "html5shiv": "~3.7.2",
+    "fontawesome": "~4.1.0"
   }
 }
