--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
   "author": "Sudharsanan Muralidharan",
   "homepage": "http://sudharti.github.io",
   "dependencies": {
-    "bootstrap-sass-official": "3.2.0",
+    "bootstrap": "3.2.0",
     "html5shiv": "~3.7.2",
     "fontawesome": "~4.1.0"
   }
