Change package name

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "bs-social-feed",
+  "name": "social-ui",
   "description": "Social News Feed Template built using Bootstrap",
   "version": "0.0.1",
   "author": "Sudharsanan Muralidharan",
