--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bs-social-feed",
+  "name": "social-ui",
   "version": "0.0.1",
   "author": {
     "name": "\"Sudharsanan\" Muralidharan",
