--- a/bower.json
+++ b/bower.json
@@ -5,8 +5,8 @@
   "author": "Sudharsanan Muralidharan",
   "homepage": "http://sudharti.github.io",
   "dependencies": {
-    "bootstrap": "3.2.0",
     "html5shiv": "~3.7.2",
-    "fontawesome": "~4.2.0"
+    "fontawesome": "~4.2.0",
+    "bootstrap-sass-official": "latest"
   }
 }
