Change theme name in all places

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ui-social",
-  "version": "0.0.1",
+  "name": "paper",
+  "version": "0.0.2",
   "author": {
     "name": "\"Sudharsanan\" Muralidharan",
     "email": "sudhar.ti@gmail.com",
